# go-react-template

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  main.go
site/: BUILD.bazel  deno.json  main.ts
site/client/: app.tsx  index.tsx
